welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:2: error: illegal start of simple pattern
  var : Int a=nums.length
      ^indexOfValue:3: error: '=' expected but ';' found.
  for (i <- 0 to (a-1)) {
^