welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {
  var : Int a=nums.length
  for (i <- 0 to (a-1)) {
    if (nums(i)==lookingFor) {
      return i
    } else return -1
	}
}